--- a/style.css
+++ b/style.css
@@ -66,6 +66,26 @@ h1, h2, h3, h4, h5, h6, p {
     background-size: cover;
 }
 
+
+/* Header */
+/* ================================== */
+
+
+/* Promo */
+/* ================================== */
+
+
+/* About */
+/* ================================== */
+
+
+/* Ingredients */
+/* ================================== */
+
+
+
+
+
 /* Menu */
 /* ================================== */
 
