--- a/style.css
+++ b/style.css
@@ -1,23 +1,9 @@
-/* Fonts
-
-font-family: 'Lato', sans-serif;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Yeseva One', cursive;
-font-family: 'Gentium Book Basic', serif;
-
-*/
-
-/* Colors
-
-// orange
-    color: #cc9900;
-
-// gray
-    color: #4c4c4c;
-
-// light-gray
-    color: #dde0df;
-
+/* 
+Fonts:
+    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Yeseva One', cursive;
+    font-family: 'Gentium Book Basic', serif;
 */
 
 
@@ -71,7 +57,7 @@ h1, h2, h3, h4, h5, h6, p {
     background: url('images/promo/bg.png') no-repeat center;
     background-size: cover;
 
-    height: 100vh; /* 1600x750px */
+    height: 100vh;
     padding: 0;
 }
 
@@ -160,9 +146,7 @@ h1, h2, h3, h4, h5, h6, p {
     display: flex;
     width: 100%;
     height: 100%;
-
     padding-top: 70px;
-    /*transform: translateY(-70px);*/
 }
 
 .promo__inner {
@@ -185,7 +169,6 @@ h1, h2, h3, h4, h5, h6, p {
 .promo__devider {
     margin: 30px 0;
 }
-
 
 .promo__btn {
     margin: 0 15px;
@@ -298,39 +281,6 @@ h1, h2, h3, h4, h5, h6, p {
     margin-top: 65px;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Menu */
 /* ================================== */
 
@@ -420,7 +370,6 @@ h1, h2, h3, h4, h5, h6, p {
     font-family: 'Yeseva One', cursive;
     font-size: 21px;
     color: #c89f2d;
-
 
     padding: 5px 0;
     margin-bottom: 10px;
@@ -796,6 +745,8 @@ input::-webkit-inner-spin-button {
     transform: scale(1.4);
 }
 
+/* Media */
+/* ================================== */
 
 
 
