--- a/style.css
+++ b/style.css
@@ -1,25 +1,34 @@
 /* Fonts
-
-font-family: 'Lato', sans-serif;
-font-family: 'Open Sans', sans-serif;
-font-family: 'Yeseva One', cursive;
-font-family: 'Gentium Book Basic', serif;
-
+    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    font-family: 'Yeseva One', cursive;
+    font-family: 'Gentium Book Basic', serif;
 */
 
-/* Colors
+/* Main media breakpoints:
+    @media (max-width: 1190px) {
+    }
 
-// orange
-    color: #cc9900;
+    @media (max-width: 1074px) {
+    }
 
-// gray
-    color: #4c4c4c;
+    @media (max-width: 954px) {
+    }
 
-// light-gray
-    color: #dde0df;
+    @media (max-width: 622px) {
+    }
 
+    @media (max-width: 480px) {
+    }
+
+    @media (max-width: 350px) {
+    }
 */
 
+
+html {
+    scroll-behavior: smooth;
+}
 
 body {
     font-family: 'Lato', sans-serif;
@@ -46,6 +55,16 @@ h1, h2, h3, h4, h5, h6, p {
     margin: 0 auto;
     padding: 0 25px;
 }
+@media(max-width: 1190px) {
+    .container {
+        max-width: 1100px;
+    }
+}
+@media(max-width: 480px) {
+    .container {
+        padding: 0;
+    }
+}
 
 /* Section */
 /* ================================== */
@@ -71,7 +90,7 @@ h1, h2, h3, h4, h5, h6, p {
     background: url('images/promo/bg.png') no-repeat center;
     background-size: cover;
 
-    height: 100vh; /* 1600x750px */
+    height: 100vh;
     padding: 0;
 }
 
@@ -84,18 +103,71 @@ h1, h2, h3, h4, h5, h6, p {
     background-size: cover;
 }
 
+@media(max-width: 1190px) {
+    .section, .section--menu, .section--about {
+        padding: 50px 0;
+    }
+}
+
+@media(max-width: 480px) {
+    .section {
+        padding: 40px 0;
+    }
+}
+@media(max-width: 480px) {
+    .section--promo, .section--about, .section--ingredients, .secton-menu, .section--reviews {
+        padding: 40px 15px;
+    }
+}
+@media(max-width: 480px) {
+    .section--menu {
+        padding: 40px 15px 10px;
+    }
+}
+
 /* Promo */
 /* ================================== */
 
+/* Header */
 .header {
     width: 100%;
-
+    
     position: absolute;
     top: 0;
     left: 0;
     z-index: 1;
 
     background: linear-gradient(rgba(0,0,0,.8), rgba(255,255,255,0));
+}
+@media (max-width: 1074px) {
+    .header {
+        padding-top: 20px;
+    }
+}
+@media (max-width: 480px) {
+    .header {
+        padding: 20px 15px 0;
+    }
+}
+
+.header.fixed {
+    position: fixed;
+    padding-top: 0;
+
+    /*background-color: rgba(184, 135, 0, 0.6);*/
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.header.fixed .nav__link {
+    padding: 20px 12px;
+}
+
+.header.burgeractive {
+    position: fixed;
+    padding-top: 0;
+    padding-bottom: 5px;
+
+    background-color: rgba(0, 0, 0, .9);
 }
 
 .header__inner {
@@ -115,6 +187,11 @@ h1, h2, h3, h4, h5, h6, p {
 
     align-items: center;
 }
+@media (max-width: 1074px) {
+    .nav {
+        display: none;
+    }
+}
 
 .nav__link {
     display: block;
@@ -129,12 +206,12 @@ h1, h2, h3, h4, h5, h6, p {
     color: #fff;
 
     text-decoration: none;
+
+    transition: border-color .1s linear;
 }
 
 .nav__link:hover {
     border-color: #c8c5bc;
-    
-    transition: border-color .1s linear;
 }
 
 .social-links {
@@ -156,13 +233,129 @@ h1, h2, h3, h4, h5, h6, p {
     transition: color .1s linear, transform .1s linear;
 }
 
+/* Burger menu */
+.burger-menu {
+    display: none; 
+    width: 50px;
+    height: 60px;
+    padding: 18px 4px;
+
+    opacity: .7;
+
+    cursor: pointer;
+}
+@media (max-width: 1074px) {
+    .burger-menu {
+        display: block;
+    }
+}
+
+.burger-menu:hover {
+    opacity: .9;
+}
+
+.burger-menu__item {
+    display: block;
+    width: 100%;
+    height: 3px;
+
+    background-color: #fff;
+
+    position: relative;
+}
+
+.burger-menu__item::after,  .burger-menu__item::before {
+    content: "";
+
+    display: block;
+    width: 100%;
+    height: 3px;
+
+    background-color: #fff;
+
+    position: absolute;
+    left: 0;
+    z-index: 1;
+
+    transition: transform .2s linear;
+}
+
+.burger-menu__item::after {
+    top: 24px;
+
+    transition: transform .2s linear;
+}
+
+.burger-menu__item::before {
+    top: 12px;
+
+    opacity: 1;
+    transition: transform .2s linear, opacity .2s linear;
+}
+
+.burger-menu.clicked .burger-menu__item {
+    transform: rotate(45deg) translate(11px, 6px);
+}
+
+.burger-menu.clicked .burger-menu__item::before {
+    opacity: 0;
+}
+
+.burger-menu.clicked .burger-menu__item::after {
+    transform: rotate(90deg) translateX(-23px);
+}
+
+.burger-nav {
+    display: none;
+    flex-direction: column;
+
+    width: 100%;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+
+    background-color: rgba(0, 0, 0, .9);
+
+    text-align: center;
+}
+
+.burger-nav.show {
+    display: flex;
+    margin-top: 70px;
+}
+
+.burger-nav__link {
+    display: block;
+    margin: 0 12px;
+    padding: 22px 12px;
+
+    border-bottom: 1px solid #333;
+
+    font-family: 'Gentium Book Basic', serif;
+    font-size: 21px;
+    font-weight: 700;
+    color: #fff;
+
+    text-decoration: none;
+
+    transition: border .1s linear;
+}
+
+.burger-nav__link:hover {
+    border-right: 3px solid #fff;
+    border-left: 3px solid #fff;
+
+}
+
+/* Promo */
 .promo {
     display: flex;
     width: 100%;
     height: 100%;
 
     padding-top: 70px;
-    /*transform: translateY(-70px);*/
 }
 
 .promo__inner {
@@ -181,25 +374,62 @@ h1, h2, h3, h4, h5, h6, p {
 
     line-height: 1.4;
 }
+@media (max-width: 1190px) {
+    .promo__title {
+        font-size: 70px;
+    }
+}
+@media (max-width: 622px) {
+    .promo__title {
+        font-size: 40px;
+    }
+}
+@media (max-width: 480px) {
+    .promo__title {
+        font-size: 30px;
+    }  
+}
 
 .promo__devider {
     margin: 30px 0;
 }
 
+.promo__buttons {
+    width: 100%;    
+}
 
 .promo__btn {
+    display: inline-block;
     margin: 0 15px;
     padding: 16px 50px;
-
-    font-family: 'Lato', sans-serif;
-    font-size: 18px;
-    color: #fff;
-    text-transform: uppercase;
 
     background-color: rgba(0,0,0,.5);
     border: 1px solid #000;
 
-    cursor:pointer;
+    cursor: pointer;
+
+    font-size: 18px;
+}
+@media (max-width: 622px) {
+    .promo__btn {
+        padding: 14px 40px;
+        font-size: 16px;
+        
+        margin-bottom: 15px;
+    }  
+}
+@media (max-width: 510px) {
+    .promo__btn {
+        padding: 20px 80px;
+        margin: 10px 0;
+    }  
+}
+
+.promo__link { 
+    font-family: 'Lato', sans-serif;
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
 }
 
 .promo__btn:hover {
@@ -209,12 +439,70 @@ h1, h2, h3, h4, h5, h6, p {
     transition: background-color, .2s linear, border-color .2s linear;
 }
 
+.home__arrow {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1000;
+
+    width: 60px;
+    height: 60px;
+
+    
+    background-color:rgba(20, 20, 20, 0.5);
+
+    border-radius: 50%;
+
+    cursor: pointer;
+
+    opacity: 0;
+    transition: opacity .2s linear;
+}
+@media (max-width: 622px) {
+    .home__arrow {
+        bottom: 10px;
+        right: 10px;
+
+        background-color:rgba(20, 20, 20, 0.3);
+    }
+}
+
+.home__arrow:hover {
+    background-color:rgba(20, 20, 20, 0.5);
+}
+
+.home__arrow.show {
+    opacity: 1;
+}
+
+.home__arrow__icon {
+    font-size: 30px;
+    color: #fff;
+
+    position: absolute;
+    top: 17px;
+    left: 17px;
+    z-index: 1000;
+
+    transition: transform .2s linear;
+}
+
+.home__arrow:hover .home__arrow__icon {
+    transform: translateY(-4px);
+}
+
 /* About */
 /* ================================== */
 
 .about {
     display: flex;
     justify-content: space-around;
+}
+@media (max-width: 620px) {
+    .about { 
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .about__content {
@@ -231,6 +519,11 @@ h1, h2, h3, h4, h5, h6, p {
     font-weight: 400;
     color: #cc9900;
 }
+@media (max-width: 480px) {
+    .about__title { 
+        font-size: 28px;
+    }
+}
 
 .about__text {
     font-size: 16px;
@@ -240,13 +533,40 @@ h1, h2, h3, h4, h5, h6, p {
 
     margin-bottom: 50px;
 }
+@media (max-width: 1074px) {
+    .about__text { 
+        margin-bottom: 20px;
+    }
+}
 
 .about__devider {
     margin: 15px 0 25px;
 }
 
 .about__author {
-    margin-left: 80px;
+    display: block;
+    width: 50%;
+    height: auto;
+    margin: 0 auto;
+
+    padding-left: 50px;
+}
+@media (max-width: 620px) {
+    .about__author { 
+        display: none;
+    }
+}
+
+.about__photo {
+    display: flex;
+}
+
+.about__photo img{
+    display: block;
+    width: 100%;
+    height: auto;
+
+    margin: auto 0;
 }
 
 /* Ingredients */
@@ -261,18 +581,30 @@ h1, h2, h3, h4, h5, h6, p {
     text-align: center;
 
     position: relative;
-    z-index: 1;
+    z-index: 0;
+
+    background: url("./images/ingredients/mask.png") center, no-repeat;
+    background-size: cover;
 }
-
-.ingredients__mask {
-    display: block;
-    width: 100%;
-    height: auto;
-
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
+@media (max-width: 954px) {
+    .ingredients {
+        padding-top: 60px;
+    }
+}
+@media (max-width: 622px) {
+    .ingredients {
+        padding: 60px 40px;
+    }
+}
+@media (max-width: 480px) {
+    .ingredients {
+        padding: 50px 40px 20px;
+    }
+}
+@media (max-width: 350px) {
+    .ingredients {
+        padding: 50px 20px 20px;
+    }
 }
 
 .ingredients__title {
@@ -282,9 +614,19 @@ h1, h2, h3, h4, h5, h6, p {
 
     color: #fff;
 }
+@media (max-width: 480px) {
+    .ingredients__title {
+        font-size: 28px;
+    }
+}
 
 .ingredients__devider {
     margin: 15px 0 25px;
+}
+@media (max-width: 954px) {
+    .ingredients__devider {
+        margin-bottom: 15px; 
+    }
 }
 
 .ingredients__text {
@@ -297,39 +639,23 @@ h1, h2, h3, h4, h5, h6, p {
 
     margin-top: 65px;
 }
+@media (max-width: 954px) {
+    .ingredients__photos {
+        margin-top: 20px; 
+    }
+}
+@media (max-width: 480px) {
+    .ingredients__photos {
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media (max-width: 480px) {
+    .ingredients__photos img{
+        margin-bottom: 20px;
+    }
+}
 
 /* Menu */
 /* ================================== */
@@ -339,23 +665,64 @@ h1, h2, h3, h4, h5, h6, p {
     flex-wrap: nowrap;
     justify-content: space-between;
 }
+@media (max-width: 954px) {
+    .menu {
+        flex-wrap: wrap;
+    }
+}
 
 .menu__col {
-    width: 455px;
+    width: 36%;
     margin-left: 100px;
+}
+@media (max-width: 954px) {
+    .menu__col {
+        width: 100%;
+        margin: 40px;
+    }
+}
+@media (max-width: 480px) {
+    .menu__col {
+        margin: 0;
+    }
 }
 
 .menu__col:last-child {
     margin-right: 100px;
     margin-left: 0;
 }
+@media (max-width: 954px) {
+    .menu__col:last-child  {
+        margin: 0 40px;
+    }
+}
+@media (max-width: 480px) {
+    .menu__col:last-child {
+        margin: 0;
+    }
+}
 
 .menu__card {
     margin-bottom: 55px;
 }
+@media (max-width: 480px) {
+    .menu__card { 
+        margin-bottom: 30px;
+    }
+}
 
 .menu__card:last-child {
     margin-bottom: 0;
+}
+@media (max-width: 954px) {
+    .menu__card:last-child  {
+        margin-bottom: 30px;
+    }
+}
+@media (max-width: 954px) {
+    .menu__card:last-child  {
+        margin-bottom: 30px;
+    }
 }
 
 .card__title {
@@ -366,16 +733,28 @@ h1, h2, h3, h4, h5, h6, p {
 
     text-align: center;
 }
+@media (max-width: 480px) {
+    .card__title { 
+        font-size: 28px;
+    }
+}
 
 .card__title:after {
     content: url("images/section/r-devider.png");
 
     display: block;
 }
+@media (max-width: 480px) {
+    .card__title:after {
+        margin-top: 10px;
+    }
+}
 
 .card__content {
     list-style: none;
     padding: 0;
+
+    margin: 0;
 }
 
 .card__dish {
@@ -384,6 +763,11 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 5px 10px 15px;
 
     position: relative;
+}
+@media (max-width: 954px) {
+    .card__dish:first-child {
+        margin-top: 5px;
+    }
 }
 
 .card__dish--special:before {
@@ -402,7 +786,7 @@ h1, h2, h3, h4, h5, h6, p {
     position: absolute;
     top: -22px;
     right: -1px;
-    z-index: 1;
+    z-index: 0;
 
     background-color: rgba(204, 153, 0, .5);
 }
@@ -421,7 +805,6 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: 21px;
     color: #c89f2d;
 
-
     padding: 5px 0;
     margin-bottom: 10px;
     border-bottom: 1px solid rgba(200, 159, 45, .4);
@@ -431,11 +814,21 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: 21px;
     font-weight: 400;
 }
+@media (max-width: 480px) {
+    .dish__title { 
+        font-size: 19px;
+    }
+}
 
 .dish__text {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     color: #4c4c4c;
+}
+@media (max-width: 480px) {
+    .dish__text { 
+        font-size: 14px;
+    }
 }
 
 /* Reviews */
@@ -452,23 +845,28 @@ h1, h2, h3, h4, h5, h6, p {
     text-align: center;
 
     position: relative;
-    z-index: 1;
-}
+    z-index: 0;
 
-.reviews__mask {
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-
+    background: url("images/reviews/content-bg.jpg") center, no-repeat, opacity .3;
+    background-size: cover;
     background-color: rgba(0, 0, 0, .9);
 }
+@media (max-width: 622px) {
+    .reviews {
+        padding: 60px 50px 80px;
 
-.reviews__mask img {
-    display: block;
-    opacity: .3;
-
-    width: 100%;
+    }
+}
+@media (max-width: 480px) {
+    .reviews {
+        padding: 40px 35px 50px;
+        min-height: 0;
+    }
+}
+@media (max-width: 350px) {
+    .reviews {
+        padding: 40px 15px 50px;
+    }
 }
 
 .reviews__title {
@@ -478,11 +876,21 @@ h1, h2, h3, h4, h5, h6, p {
 
     margin-bottom: 5px;
 }
+@media (max-width: 480px) {
+    .reviews__title {
+        font-size: 28px;
+    }
+}
 
 .reviews__title:after {
     content: url("images/section/w-devider.png");
 
     display: block;
+}
+@media (max-width: 480px) {
+    .reviews__title:after {
+        margin: 15px 0;
+    }
 }
 
 .reviews__quotes {
@@ -495,6 +903,17 @@ h1, h2, h3, h4, h5, h6, p {
     font-size: 96px;
     color: #979997;
 }
+@media (max-width: 480px) {
+    .reviews__quotes {
+        top: 110px;
+        font-size: 60px;
+    }
+}
+@media (max-width: 350px) {
+    .reviews__quotes {
+        left: 5px;
+    }
+}
 
 .reviews__text {
     font-family: 'Gentium Book Basic', serif;
@@ -506,12 +925,22 @@ h1, h2, h3, h4, h5, h6, p {
 
     margin-bottom: 30px;
 }
+@media (max-width: 480px) {
+    .reviews__text {
+        font-size: 18px;
+    }
+}
 
 .reviews__author {
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     color: #fff;
     text-decoration: none;
+}
+@media (max-width: 480px) {
+    .reviews__author {
+        font-size: 16px;
+    }
 }
 
 .reviews__author:hover {
@@ -527,17 +956,45 @@ h1, h2, h3, h4, h5, h6, p {
 
     padding: 0 40px;
 }
+@media (max-width: 1190px) {
+    .reservation {
+        flex-direction: column-reverse;
+
+        align-items: center;
+    }
+}
+@media (max-width: 480px) {
+    .reservation {
+        padding: 0;
+    }
+}
 
 .reservation__images {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 
     width: 100%;
-    max-width: 570px;
+    max-width: 600px;
+
+    max-height: 500px;
+}
+@media (max-width: 1190px) {
+    .reservation__images {
+        width: 80%;
+        margin-top: 20px;
+    }
+}
+@media (max-width: 680px) {
+    .reservation__images {
+        display: none;
+    }
 }
 
 .reservation__img {
-    width: 270px;
+    display: block;
+    width: 47%;
+ 
     height: auto;
 }
 
@@ -548,6 +1005,17 @@ h1, h2, h3, h4, h5, h6, p {
 
     text-align: center;
 }
+@media (max-width: 680px) {
+    .reservation__content {
+        padding: 0;
+    }
+}
+
+@media (max-width: 680px) {
+    .reservation__content__description {
+        padding: 0 15px;
+    }
+}
 
 .reservation__title {
     font-family: 'Yeseva One', cursive;
@@ -556,6 +1024,12 @@ h1, h2, h3, h4, h5, h6, p {
     color: #cc9900;
 
     margin-bottom: 20px;
+}
+
+@media (max-width: 480px) {
+    .reservation__title { 
+        font-size: 28px;
+    }
 }
 
 .reservation__title:after {
@@ -585,6 +1059,11 @@ h1, h2, h3, h4, h5, h6, p {
     flex-wrap: wrap;
     justify-content: space-between;
 }
+@media (max-width: 680px) {
+    .reservation__form {
+        justify-content: space-around;
+    }
+}
 
 .reservation__form__item {
     display: flex;
@@ -593,6 +1072,11 @@ h1, h2, h3, h4, h5, h6, p {
     text-align: left;
 
     position: relative;
+}
+@media (max-width: 680px) {
+    .reservation__form__item {
+        margin: 0 5px;
+    }
 }
 
 .reservation__label {
@@ -709,6 +1193,14 @@ input::-webkit-inner-spin-button {
 
     transition: background-color .1s linear;
 }
+@media (max-width: 680px) {
+    .reservation__btn {
+        width: 100%;
+        padding: 20px 65px;
+
+        font-size: 20px;
+    }
+}
 
 .reservation__btn:hover {
     background-color: #bc8a00;
@@ -733,30 +1225,88 @@ input::-webkit-inner-spin-button {
 
     padding: 50px 40px 60px;
 }
+@media (max-width: 954px) {
+    .footer__inner {
+        flex-wrap: wrap; 
+    }
+}
+@media (max-width: 622px) {
+    .footer__inner {
+        padding: 0;
+    }
+}
+@media(max-width: 480px) {
+    .footer {
+        padding: 0 15px;
+    }
+}
 
 .footer__card {
     width: 370px;
+    width: 35%;
 
     text-align: center;
 }
+@media (max-width: 954px) {
+    .footer__card:first-child {
+        width: 90%;
+        margin: 0 auto 40px;
+    }
 
-.footer__title {
+    .footer__card {
+        width: 50%;
+    }
+}
+@media (max-width: 622px) {
+    .footer__card:first-child {
+        width: 100%;
+        margin: 0 auto;
+    }
+    .footer__card {
+        width: 100%;
+        margin: 0 auto;
+
+        padding: 20px 0;
+
+        border-bottom: 1px solid #333;
+    }
+}
+
+.footer__card__title {
     font-family: 'Yeseva One', cursive;
     font-size: 21px;
     font-weight: 400;
     color: #fefefe;
 }
+@media (max-width: 622px) {
+    .footer__card__title {
+        cursor: pointer;
+    }
+}
 
-.footer__title:after {
+.footer__card__title:after {
     content: url("images/section/w-devider-sm.png");
 
     display: block;
     margin: 15px 0 15px;
 }
+@media (max-width: 622px) {
+    .footer__card__title:after {
+        display: block;
+    }
+}
 
-.footer__content {
-    display: flex;
-    flex-direction: column;
+.footer__card__content {
+    display: block;
+}
+@media (max-width: 622px) {
+    .footer__card__content {
+        display: none;
+    }
+}
+
+.footer__card__content.active {
+    display: block;
 }
 
 .footer__text {
@@ -764,6 +1314,11 @@ input::-webkit-inner-spin-button {
     font-size: 16px;
     font-weight: 400;
     color: #fff;
+}
+@media (max-width: 480px) {
+    .footer__text {
+        font-size: 14px;
+    }
 }
 
 .footer__text--bold {
@@ -777,12 +1332,22 @@ input::-webkit-inner-spin-button {
     font-style: normal;
     color: #fff;
 }
+@media (max-width: 480px) {
+    .footer__address {
+        font-size: 14px;
+    }
+}
 
 .footer__icons {
     font-size: 16px;
     color: #fff;
 
     margin-top: 45px;
+}
+@media (max-width: 954px) {
+    .footer__icons {
+        margin-top: 15px;
+    }
 }
 
 .footer__link {
@@ -795,13 +1360,6 @@ input::-webkit-inner-spin-button {
 .footer__link:hover{
     transform: scale(1.4);
 }
-
-
-
-
-
-
-
 
 
 
